@@ -17,11 +17,6 @@ init:
 install:
   # Install InnoSetup and add to path
   - appveyor-retry choco install -y innosetup --version=6.2.0
-  # Set InnoSetup path here, because otherwise version 5 is used for some reason
-  #- set PATH=%PATH%;'C:\\Program Files (x86)\\Inno Setup 6'
-  #- set PATH="C:\\Program Files (x86)\\Inno Setup 6",%PATH%
-  #- iscc
-  - C:\\"Program Files (x86)"\\"Inno Setup 6"\\ISCC.exe /?
   - appveyor-retry choco install -y wget --version 1.20
   # install R with lme4
   - wget -q https://cran.r-project.org/bin/windows/base/old/3.6.3/R-3.6.3-win.exe
